[project]
name = "cq_repl"
version = "0.1.0"
license = {file = "LICENSE"}
authors = [
  { name="Jeremy Wright" },
]
description = "REPL interface for CadQuery models."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "cadquery"
]

[project.scripts]
cq-repl = "cq_repl.main:main"

[project.optional-dependencies]
dev = [
  "pytest",
  "black==19.10b0",
  "click==8.0.4"
]

[project.urls]
"Homepage" = "https://github.com/CadQuery/cq-repl"
"Bug Tracker" = "https://github.com/CadQuery/cq-repl/issues"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/cq_repl"]